Added simple navbar hyperlinks for testing while fixing bootstrap scrollable issue.

--- a/home.html
+++ b/home.html
@@ -16,8 +16,15 @@
   <body>
     <div class="container-fluid">
       <div class="row wrapper">
-        <nav class="col" id="sidebar">
-        
+        <nav id="sidebar">
+          <div class="col">
+            <a href="home.html">ICON</a>
+            <a href="about.html">ABOUT</a>
+            <a href="photos.html">PHOTO</a>
+            <a href="music.html">MUSIC</a>
+            <a href="videos.html">VIDEO</a>
+            <a href="contact.html">CONTACT</a>
+          </div>
         </nav>
         <main class="col">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus luctus quam at sollicitudin. Nullam ut erat sem. Maecenas vel accumsan metus. Morbi imperdiet turpis quam, eu lobortis quam pretium vel. Sed ac hendrerit enim. Suspendisse potenti. Donec metus erat, lobortis non mi vitae, sagittis gravida dui. Aliquam metus est, egestas ac elit eu, hendrerit commodo ipsum. Mauris posuere diam felis, ac eleifend purus pulvinar nec.</p>
