--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row wrapper">
+      <div class="row">
         <nav id="sidebar">
           <div class="col">
             <a href="home.html">ICON</a>
