--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
     <div class="container-fluid">
       <div class="row">
         <nav id="sidebar">
-          <div class="col">
-            <a href="home.html">ICON</a>
+          <div id="navbar" class="col">
+            <a href="home.html"><img src="images/maroon5-logo.jpg" alt="maroon5 logo"></a>
             <a href="about.html">ABOUT</a>
             <a href="photos.html">PHOTO</a>
             <a href="music.html">MUSIC</a>
