Changes made to home.html 1. Removed paragraphs 2. Added Google Font to change the #navbar 3. Added styles: paddings to <a> navbar

--- a/home.html
+++ b/home.html
@@ -18,7 +18,9 @@
       <div class="row">
         <nav id="sidebar">
           <div id="navbar" class="col">
-            <a href="home.html"><img src="images/maroon5-logo.jpg" alt="maroon5 logo"></a>
+            <a href="home.html" id="m-logo">
+              <img src="images/maroon5-logo.jpg" alt="maroon5 logo">
+            </a>
             <a href="about.html">ABOUT</a>
             <a href="photos.html">PHOTO</a>
             <a href="music.html">MUSIC</a>
@@ -27,6 +29,7 @@
           </div>
         </nav>
         <main class="col">
+          <!-- 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus luctus quam at sollicitudin. Nullam ut erat sem. Maecenas vel accumsan metus. Morbi imperdiet turpis quam, eu lobortis quam pretium vel. Sed ac hendrerit enim. Suspendisse potenti. Donec metus erat, lobortis non mi vitae, sagittis gravida dui. Aliquam metus est, egestas ac elit eu, hendrerit commodo ipsum. Mauris posuere diam felis, ac eleifend purus pulvinar nec.</p>
 
           <p>Mauris sapien neque, interdum nec nibh et, volutpat auctor nibh. In commodo dui ex, at sagittis metus elementum ut. Aenean ultricies accumsan est in commodo. Vivamus eu placerat mi. Nullam lacinia, metus a blandit sagittis, odio dolor aliquam odio, ac scelerisque diam leo et massa. Maecenas hendrerit molestie purus id sagittis. Morbi venenatis tincidunt metus, at sollicitudin augue tincidunt in. Aenean ut erat id turpis iaculis tincidunt vel sed purus. Nam vulputate nec neque non suscipit. Nulla pharetra urna tortor, vitae suscipit velit consectetur at. Sed augue ipsum, faucibus eu nibh et, ornare sagittis ex. Duis bibendum iaculis odio sit amet malesuada.</p>
@@ -46,6 +49,7 @@
           <p>Suspendisse condimentum tincidunt ultricies. Fusce scelerisque sollicitudin pulvinar. Sed sit amet ligula molestie, viverra lectus eu, sollicitudin lorem. Pellentesque vel elit imperdiet, tincidunt arcu non, mollis metus. Ut sagittis tellus nulla, molestie auctor nisi luctus ac. Sed viverra condimentum nunc, et tempus ante interdum ac. Duis fringilla efficitur tellus, id iaculis erat. Pellentesque nibh metus, eleifend vel pellentesque eu, placerat a ligula. Nullam a mattis massa.</p>
           
           <p>Nam risus metus, aliquam ac ex id, mattis ultricies augue. Ut turpis augue, faucibus non tempus nec, convallis nec quam. Phasellus ornare egestas cursus. Nunc vel arcu pellentesque, faucibus sem ac, rhoncus erat. Praesent vel viverra nulla. Nulla vel auctor eros. Fusce mattis et velit accumsan dignissim. Donec ut pulvinar lorem. Phasellus euismod urna augue, at vehicula ex consequat at. Nulla at tempus tortor. Donec vel justo nec ligula rhoncus porttitor non quis mi. Fusce felis dui, efficitur vel nisl ac, tincidunt convallis nibh.</p>
+          -->
         </main>
       </div>
     </div>
