Changes made to navbar of the following html pages ... about, contact, music, photos and videos.

--- a/about.html
+++ b/about.html
@@ -19,15 +19,17 @@
   <div class="container-fluid">
     <div class="row">
       <nav id="sidebar">
-        <div class="col">
-          <a href="home.html">ICON</a>
-          <a href="about.html">ABOUT</a>
-          <a href="photos.html">PHOTO</a>
-          <a href="music.html">MUSIC</a>
-          <a href="videos.html">VIDEO</a>
-          <a href="contact.html">CONTACT</a>
-        </div>
-      </nav>
+          <div id="navbar" class="col">
+            <a href="home.html" id="m-logo">
+              <img src="images/maroon5-logo.jpg" alt="maroon5 logo">
+            </a>
+            <a href="about.html">ABOUT</a>
+            <a href="photos.html">PHOTO</a>
+            <a href="music.html">MUSIC</a>
+            <a href="videos.html">VIDEO</a>
+            <a href="contact.html">CONTACT</a>
+          </div>
+        </nav>
       <main class="col">
       </main>
     </div>
