--- a/contact.html
+++ b/contact.html
@@ -8,34 +8,52 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  
+
   <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="style.css">
-  
+
   <title>Maroon 5</title>
-  
+
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="row">
       <nav id="sidebar">
-          <div id="navbar" class="col">
-            <a href="home.html" id="m-logo">
+        <div id="navbar" class="col">
+          <a href="home.html" id="m-logo">
               <img src="images/maroon5-logo.jpg" alt="maroon5 logo">
             </a>
-            <a href="about.html">ABOUT</a>
-            <a href="photos.html">PHOTO</a>
-            <a href="music.html">MUSIC</a>
-            <a href="videos.html">VIDEO</a>
-            <a href="contact.html">CONTACT</a>
-          </div>
-        </nav>
-      <main class="col">
+          <a href="about.html">ABOUT</a>
+          <a href="photos.html">PHOTO</a>
+          <a href="music.html">MUSIC</a>
+          <a href="videos.html">VIDEO</a>
+          <a href="contact.html">CONTACT</a>
+        </div>
+      </nav>
+      <main id="contact-bg" class="col">
+        <div class="contact-form">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
       </main>
     </div>
   </div>
-  
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
