--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <a href="contact.html">CONTACT</a>
           </div>
         </nav>
-        <main class="col">
+        <main id="home-bg" class="col">
           <!-- 
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus luctus quam at sollicitudin. Nullam ut erat sem. Maecenas vel accumsan metus. Morbi imperdiet turpis quam, eu lobortis quam pretium vel. Sed ac hendrerit enim. Suspendisse potenti. Donec metus erat, lobortis non mi vitae, sagittis gravida dui. Aliquam metus est, egestas ac elit eu, hendrerit commodo ipsum. Mauris posuere diam felis, ac eleifend purus pulvinar nec.</p>
 
