--- a/contact.html
+++ b/contact.html
@@ -35,17 +35,20 @@
         <div class="contact-form">
           <form>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <label for="uNameInput">Name</label>
+              <input type="text" class="form-control" id="uNameInput" placeholder="Enter name">
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <label for="uEmailInput">Email address</label>
+              <input type="email" class="form-control" id="uEmailInput" placeholder="Enter email">
             </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <div class="form-group">
+              <label for="uContactInput">Contact</label>
+              <input type="text" class="form-control" id="uContactInput" placeholder="Enter contact">
+            </div>
+            <div class="form-group">
+              <label for="uMessageInput">Message</label>
+              <input type="text" class="form-control" id="uMessageInput" placeholder="Enter message">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
