Changes made to about, contact, and home.html, and style.css 1. Added new logo image and overwrite the old file of maroon5-logo.png 2. Change the layout of navbar for home.html and style.css 3. Change the layout of contact.html and style.css 4. Added paragraphs for about.html

--- a/contact.html
+++ b/contact.html
@@ -35,19 +35,19 @@
         <div class="contact-form">
           <form>
             <div class="form-group">
-              <label for="uNameInput">Name</label>
+              <label for="uNameInput"><strong>Name</strong></label>
               <input type="text" class="form-control" id="uNameInput" placeholder="Enter name">
             </div>
             <div class="form-group">
-              <label for="uEmailInput">Email address</label>
+              <label for="uEmailInput"><strong>Email address</strong></label>
               <input type="email" class="form-control" id="uEmailInput" placeholder="Enter email">
             </div>
             <div class="form-group">
-              <label for="uContactInput">Contact</label>
+              <label for="uContactInput"><strong>Contact</strong></label>
               <input type="text" class="form-control" id="uContactInput" placeholder="Enter contact">
             </div>
             <div class="form-group">
-              <label for="uMessageInput">Message</label>
+              <label for="uMessageInput"><strong>Message</strong></label>
               <input type="text" class="form-control" id="uMessageInput" placeholder="Enter message">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
