Made changes to contact.html regarding...> 1. Change form width size to 1000px 2. Add h1 'Contact Us' and horizontal rule to show it as the form title

--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,8 @@
       </nav>
       <main id="contact-bg" class="col">
         <div class="contact-form">
+          <h1>Contact Us</h1>
+          <hr/>
           <form>
             <div class="form-group">
               <label for="uNameInput"><strong>Name</strong></label>
