Added styles, font-family and color to heading1 in videos.html

--- a/videos.html
+++ b/videos.html
@@ -31,7 +31,7 @@
             <a href="contact.html">CONTACT</a>
           </div>
         </nav>
-      <main class="col">
+      <main id="videos-bg" class="col">
         <h1 class="m-2">Videos</h1>
         <div class="d-flex justify-content-around m-2">
           <div>
