1. Made changes to the ids in contact, home and videos .html pages 2. Added resources link into README.md for documentation.

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
           <a href="contact.html">CONTACT</a>
         </div>
       </nav>
-      <main id="contact-bg" class="col">
+      <main id="contact" class="col">
         <div class="contact-form">
           <h1>Contact Us</h1>
           <hr/>
