--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <a href="contact.html">CONTACT</a>
           </div>
         </nav>
-        <main id="home-bg" class="col">
+        <main id="home" class="col">
         </main>
       </div>
     </div>
