1. Added background image to music.html 2. Change the style ids for contact, home and videos .html pages

--- a/music.html
+++ b/music.html
@@ -31,7 +31,7 @@
             <a href="contact.html">CONTACT</a>
           </div>
         </nav>
-      <main class="col">
+      <main id="music" class="col">
       </main>
     </div>
   </div>
