Added text-white bootstrap class for selected heading1 (photos, music and videos) .html pages

--- a/photos.html
+++ b/photos.html
@@ -31,7 +31,8 @@
             <a href="contact.html">CONTACT</a>
           </div>
         </nav>
-      <main class="col">
+      <main id="photos" class="col">
+        <h1 class="m-2 text-white">Photos</h1>
       </main>
     </div>
   </div>
