--- a/videos.html
+++ b/videos.html
@@ -32,7 +32,7 @@
           </div>
         </nav>
       <main id="videos" class="col">
-        <h1 class="m-2">Videos</h1>
+        <h1 class="m-2 text-white">Videos</h1>
         <div class="d-flex justify-content-around m-2">
           <div>
             <iframe src="https://www.youtube.com/embed/09R8_2nJtjg?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
