1. Fix navbar for all pages to display the homepage logo. 2. Added some description to README.md

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
     <div class="row">
       <nav id="sidebar">
         <div id="navbar" class="col">
-          <a href="home.html" id="m-logo">
-              <img src="images/maroon5-logo.jpg" alt="maroon5 logo">
+          <a href="home.html">
+              <img id="m-logo" src="images/maroon5-logo.png" alt="maroon5 logo">
             </a>
           <a href="about.html">ABOUT</a>
           <a href="photos.html">PHOTO</a>
