--- a/music.html
+++ b/music.html
@@ -8,35 +8,35 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  
+
   <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="style.css">
-  
+
   <title>Maroon 5</title>
-  
+
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="row">
       <nav id="sidebar">
-          <div id="navbar" class="col">
-            <a href="home.html" id="m-logo">
-              <img src="images/maroon5-logo.jpg" alt="maroon5 logo">
+        <div id="navbar" class="col">
+          <a href="home.html">
+              <img id="m-logo" src="images/maroon5-logo.png" alt="maroon5 logo">
             </a>
-            <a href="about.html">ABOUT</a>
-            <a href="photos.html">PHOTO</a>
-            <a href="music.html">MUSIC</a>
-            <a href="videos.html">VIDEO</a>
-            <a href="contact.html">CONTACT</a>
-          </div>
-        </nav>
+          <a href="about.html">ABOUT</a>
+          <a href="photos.html">PHOTO</a>
+          <a href="music.html">MUSIC</a>
+          <a href="videos.html">VIDEO</a>
+          <a href="contact.html">CONTACT</a>
+        </div>
+      </nav>
       <main id="music" class="col">
         <h1 class="m-2 text-white"></h1>
       </main>
     </div>
   </div>
-  
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
