--- a/music.html
+++ b/music.html
@@ -32,7 +32,7 @@
         </div>
       </nav>
       <main id="music" class="col">
-        <h1 class="m-2 text-white"></h1>
+        <h1 class="m-2 text-white">Musics</h1>
       </main>
     </div>
   </div>
