1. Added some changes to spotify playlist to music.html 2. Made some changes to the styling on style.css

--- a/music.html
+++ b/music.html
@@ -33,6 +33,16 @@
       </nav>
       <main id="music" class="col">
         <h1 class="m-2 text-white">Musics</h1>
+        <div id="spotify-list">
+          <div>
+            <iframe src="https://open.spotify.com/embed/album/1Li4rADxSxjT2g4xqUcMYh" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe src="https://open.spotify.com/embed/album/6LtzdMGhOCh9s6sssWrpuD" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </div>
+          <div>
+            <iframe src="https://open.spotify.com/embed/album/6XYL7jVgFaxD1X7F8IMO2b" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe src="https://open.spotify.com/embed/album/4aqbZrtqu8FYFqMB9BIdH0" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </div>
+        </div>
       </main>
     </div>
   </div>
