Made changes to heading1 due to spelling error for the word 'Music'.

--- a/music.html
+++ b/music.html
@@ -32,7 +32,7 @@
         </div>
       </nav>
       <main id="music" class="col">
-        <h1 class="m-2 text-white">Musics</h1>
+        <h1 class="m-2 text-white">Music</h1>
         <div id="spotify-list">
           <div>
             <iframe src="https://open.spotify.com/embed/album/1Li4rADxSxjT2g4xqUcMYh" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
