1. Made changes to navbar texts due to spelling error. 2. Added and remove some stylings to contact-form to make it blend with the background image.

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
       <main id="contact" class="col">
         <div class="contact-form">
           <h1>Contact Us</h1>
-          <hr/>
+          <hr class="mb-3"/>
           <form>
             <div class="form-group">
               <label for="uNameInput"><strong>Name</strong></label>
@@ -50,7 +50,8 @@
             </div>
             <div class="form-group">
               <label for="uMessageInput"><strong>Message</strong></label>
-              <input type="text" class="form-control" id="uMessageInput" placeholder="Enter message">
+               <textarea class="form-control" id="uMessageInput"></textarea>
+              <!-- <input type="text" class="form-control" id="uMessageInput" placeholder="Enter message"> -->
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
