Made some updates to formatting in README.md

--- a/contact.html
+++ b/contact.html
@@ -25,16 +25,15 @@
               <img id="m-logo" src="images/maroon5-logo.png" alt="maroon5 logo">
             </a>
           <a href="about.html">ABOUT</a>
-          <a href="photos.html">PHOTO</a>
+          <a href="photos.html">PHOTOS</a>
           <a href="music.html">MUSIC</a>
-          <a href="videos.html">VIDEO</a>
+          <a href="videos.html">VIDEOS</a>
           <a href="contact.html">CONTACT</a>
         </div>
       </nav>
       <main id="contact" class="col">
         <div class="contact-form">
-          <h1>Contact Us</h1>
-          <hr class="mb-3"/>
+          <h1 class="mb-4">Contact Us</h1>
           <form>
             <div class="form-group">
               <label for="uNameInput"><strong>Name</strong></label>
@@ -50,7 +49,7 @@
             </div>
             <div class="form-group">
               <label for="uMessageInput"><strong>Message</strong></label>
-               <textarea class="form-control" id="uMessageInput"></textarea>
+              <textarea class="form-control" id="uMessageInput"></textarea>
               <!-- <input type="text" class="form-control" id="uMessageInput" placeholder="Enter message"> -->
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
