Made changes to some spelling errors on the navbar.

--- a/home.html
+++ b/home.html
@@ -22,9 +22,9 @@
               <img id="m-logo" src="images/maroon5-logo.png" alt="maroon5 logo">
             </a>
             <a href="about.html">ABOUT</a>
-            <a href="photos.html">PHOTO</a>
+            <a href="photos.html">PHOTOS</a>
             <a href="music.html">MUSIC</a>
-            <a href="videos.html">VIDEO</a>
+            <a href="videos.html">VIDEOS</a>
             <a href="contact.html">CONTACT</a>
           </div>
         </nav>
