--- a/contact.html
+++ b/contact.html
@@ -49,10 +49,10 @@
             </div>
             <div class="form-group">
               <label for="uMessageInput"><strong>Message</strong></label>
-              <textarea class="form-control" id="uMessageInput"></textarea>
+              <textarea class="form-control" id="uMessageInput" placeholder="Enter your message"></textarea>
               <!-- <input type="text" class="form-control" id="uMessageInput" placeholder="Enter message"> -->
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-warning">Submit</button>
           </form>
         </div>
       </main>
