1. Added one <div> to encapsulate the photos structure to perform styling of paddings as a whole. 2. Added :hover and transition speed to images when mouseover event triggers.

--- a/photos.html
+++ b/photos.html
@@ -32,29 +32,31 @@
         </div>
       </nav>
       <main id="photos" class="col">
-        <h1 class="m-2 text-white">Photos</h1>
-        <div class="row">
-          <div class="column">
-            <img src="images/maroon5-01.jpg">
-            <img src="images/maroon5-02.jpg">
-            <img src="images/maroon5-03.jpg">
-            <img src="images/maroon5-04.jpg">
-            <img src="images/maroon5-05.jpg">
-            <img src="images/maroon5-06.jpg">
-            <img src="images/maroon5-07.jpg">
-            <img src="images/maroon5-08.jpg">
-            <img src="images/maroon5-09.jpg">
-          </div>
-          <div class="column">
-            <img src="images/maroon5-02.jpg">
-            <img src="images/maroon5-04.jpg">
-            <img src="images/maroon5-06.jpg">
-            <img src="images/maroon5-08.jpg">
-            <img src="images/maroon5-01.jpg">
-            <img src="images/maroon5-03.jpg">
-            <img src="images/maroon5-05.jpg">
-            <img src="images/maroon5-09.jpg">
-            <img src="images/maroon5-07.jpg">
+        <div>
+          <h1 class="m-2 text-white">Photos</h1>
+          <div class="row">
+            <div class="column">
+              <img src="images/maroon5-01.jpg">
+              <img src="images/maroon5-02.jpg">
+              <img src="images/maroon5-03.jpg">
+              <img src="images/maroon5-04.jpg">
+              <img src="images/maroon5-05.jpg">
+              <img src="images/maroon5-06.jpg">
+              <img src="images/maroon5-07.jpg">
+              <img src="images/maroon5-08.jpg">
+              <img src="images/maroon5-09.jpg">
+            </div>
+            <div class="column">
+              <img src="images/maroon5-02.jpg">
+              <img src="images/maroon5-04.jpg">
+              <img src="images/maroon5-06.jpg">
+              <img src="images/maroon5-08.jpg">
+              <img src="images/maroon5-01.jpg">
+              <img src="images/maroon5-03.jpg">
+              <img src="images/maroon5-05.jpg">
+              <img src="images/maroon5-09.jpg">
+              <img src="images/maroon5-07.jpg">
+            </div>
           </div>
         </div>
       </main>
