1. Added social media icons to direct members of the public to view band's social media page. 2. Added styling for social media icons inside the navbar. 3. Amend some minor code formats in style.css

--- a/photos.html
+++ b/photos.html
@@ -29,6 +29,17 @@
           <a href="music.html">MUSIC</a>
           <a href="videos.html">VIDEOS</a>
           <a href="contact.html">CONTACT</a>
+          <div id="social">
+            <a href="https://www.facebook.com/maroon5/">
+              <img src="images/fb-icon.png" alt="Maroon 5 facebook channel" />
+            </a>
+            <a href="https://twitter.com/maroon5?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+              <img src="images/twitter-icon.png" alt="Maroon 5 twitter channel" />
+            </a>
+            <a href="https://www.youtube.com/channel/UCBVjMGOIkavEAhyqpxJ73Dw">
+              <img src="images/youtube-icon.png" alt="Maroon 5 youtube channel" />
+            </a>
+          </div>
         </div>
       </nav>
       <main id="photos" class="col">
