--- a/music.html
+++ b/music.html
@@ -45,17 +45,38 @@
       <main id="music" class="col">
         <h1 class="m-2 text-white">Music</h1>
         <div id="spotify-list">
-          <div>
-            <iframe src="https://open.spotify.com/embed/album/1Li4rADxSxjT2g4xqUcMYh" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            <iframe src="https://open.spotify.com/embed/album/6LtzdMGhOCh9s6sssWrpuD" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <!-- 1st playlist -->
+          <div class="row">
+            <div class="col">
+              <img src="images/m5-album-01.png" />
+              <iframe src="https://open.spotify.com/embed/album/1Li4rADxSxjT2g4xqUcMYh" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
           </div>
-          <div>
-            <iframe src="https://open.spotify.com/embed/album/6XYL7jVgFaxD1X7F8IMO2b" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            <iframe src="https://open.spotify.com/embed/album/4aqbZrtqu8FYFqMB9BIdH0" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <!-- 2nd playlist -->
+          <div class="row">
+            <div class="col">
+              <img src="images/m5-album-02.jpg" />
+              <iframe src="https://open.spotify.com/embed/album/6LtzdMGhOCh9s6sssWrpuD" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+          </div>
+          <!-- 3rd playlist -->
+          <div class="row">
+            <div class="col">
+              <img src="images/m5-album-03.jpg" />
+              <iframe src="https://open.spotify.com/embed/album/6XYL7jVgFaxD1X7F8IMO2b" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+          </div>
+          <!-- 4th playlist -->
+          <div class="row">
+            <div class="col">
+              <img src="images/m5-album-04.jpg" />
+              <iframe src="https://open.spotify.com/embed/album/4aqbZrtqu8FYFqMB9BIdH0" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
           </div>
         </div>
-      </main>
     </div>
+    </main>
+  </div>
   </div>
 
   <!-- Optional JavaScript -->
