1. Made changes to the navbar's background color from static black to gradient color in style.css 2. Added padding style in bootstrap form to all files

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         </div>
       </nav>
       <main id="about" class="col">
-        <article>
+        <div class="p-5">
           <h1>The Band</h1>
           <p>Maroon 5 is an American pop rock band from Los Angeles, California. It currently consists of lead vocalist Adam Levine, keyboardist and rhythm guitarist Jesse Carmichael, bassist Mickey Madden, lead guitarist James Valentine, drummer Matt Flynn,
             keyboardist PJ Morton, and multi-instrumentalist Sam Farrar. Original members Levine, Carmichael, Madden, and drummer Ryan Dusick first came together as Kara's Flowers in 1994, while they were still in high school. After self-releasing their
@@ -73,7 +73,7 @@
             <li>PJ Morton – keyboards, backing vocals (2012–present; touring member 2010–2012)</li>
             <li>Sam Farrar – keyboards, synthesizers, MPC, guitar, bass guitar, percussion, backing vocals (2016–present; touring member 2012–2016)</li>
           </ul>
-        </article>
+        </div>
       </main>
     </div>
   </div>
