--- a/music.html
+++ b/music.html
@@ -30,53 +30,54 @@
           <a href="videos.html">VIDEOS</a>
           <a href="contact.html">CONTACT</a>
           <div id="social">
-            <a href="https://www.facebook.com/maroon5/">
-              <img src="images/fb-icon.png" alt="Maroon 5 facebook channel" />
+            <a href="https://www.facebook.com/maroon5/" alt="Maroon 5 facebook channel" target="_blank">
+              <img src="images/fb-icon.png" alt="Facebook Icon"/>
             </a>
-            <a href="https://twitter.com/maroon5?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
-              <img src="images/twitter-icon.png" alt="Maroon 5 twitter channel" />
+            <a href="https://twitter.com/maroon5?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" alt="Maroon 5 twitter channel" target="_blank">
+              <img src="images/twitter-icon.png" alt="Twitter Icon"/>
             </a>
-            <a href="https://www.youtube.com/channel/UCBVjMGOIkavEAhyqpxJ73Dw">
-              <img src="images/youtube-icon.png" alt="Maroon 5 youtube channel" />
+            <a href="https://www.youtube.com/channel/UCBVjMGOIkavEAhyqpxJ73Dw" alt="Maroon 5 youtube channel" target="_blank">
+              <img src="images/youtube-icon.png" alt="Youtube Icon"/>
             </a>
           </div>
         </div>
       </nav>
       <main id="music" class="col">
-        <h1 class="m-2 text-white">Music</h1>
-        <div id="spotify-list">
-          <!-- 1st playlist -->
-          <div class="row">
-            <div class="col">
-              <img src="images/m5-album-01.png" />
-              <iframe src="https://open.spotify.com/embed/album/1Li4rADxSxjT2g4xqUcMYh" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <div class="p-5">
+          <h1>Music</h1>
+          <div id="spotify-list">
+            <!-- 1st playlist -->
+            <div class="row">
+              <div class="col">
+                <img src="images/m5-album-01.png" />
+                <iframe src="https://open.spotify.com/embed/album/1Li4rADxSxjT2g4xqUcMYh" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+              </div>
             </div>
-          </div>
-          <!-- 2nd playlist -->
-          <div class="row">
-            <div class="col">
-              <img src="images/m5-album-02.jpg" />
-              <iframe src="https://open.spotify.com/embed/album/6LtzdMGhOCh9s6sssWrpuD" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <!-- 2nd playlist -->
+            <div class="row">
+              <div class="col">
+                <img src="images/m5-album-02.jpg" />
+                <iframe src="https://open.spotify.com/embed/album/6LtzdMGhOCh9s6sssWrpuD" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+              </div>
             </div>
-          </div>
-          <!-- 3rd playlist -->
-          <div class="row">
-            <div class="col">
-              <img src="images/m5-album-03.jpg" />
-              <iframe src="https://open.spotify.com/embed/album/6XYL7jVgFaxD1X7F8IMO2b" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <!-- 3rd playlist -->
+            <div class="row">
+              <div class="col">
+                <img src="images/m5-album-03.jpg" />
+                <iframe src="https://open.spotify.com/embed/album/6XYL7jVgFaxD1X7F8IMO2b" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+              </div>
             </div>
-          </div>
-          <!-- 4th playlist -->
-          <div class="row">
-            <div class="col">
-              <img src="images/m5-album-04.jpg" />
-              <iframe src="https://open.spotify.com/embed/album/4aqbZrtqu8FYFqMB9BIdH0" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <!-- 4th playlist -->
+            <div class="row">
+              <div class="col">
+                <img src="images/m5-album-04.jpg" />
+                <iframe src="https://open.spotify.com/embed/album/4aqbZrtqu8FYFqMB9BIdH0" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+              </div>
             </div>
           </div>
         </div>
+      </main>
     </div>
-    </main>
-  </div>
   </div>
 
   <!-- Optional JavaScript -->
