--- a/photos.html
+++ b/photos.html
@@ -35,7 +35,7 @@
             </a>
             <a href="https://twitter.com/maroon5?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
               <img src="images/twitter-icon.png" alt="Maroon 5 twitter channel" />
-            </a> 
+            </a>
             <a href="https://www.youtube.com/channel/UCBVjMGOIkavEAhyqpxJ73Dw">
               <img src="images/youtube-icon.png" alt="Maroon 5 youtube channel" />
             </a>
@@ -43,8 +43,8 @@
         </div>
       </nav>
       <main id="photos" class="col">
-        <div>
-          <h1 class="m-2 text-white">Photos</h1>
+        <div class="p-5">
+          <h1>Photos</h1>
           <div class="row">
             <div class="column">
               <img src="images/maroon5-01.jpg">
